If the treatment take is over a certain length then display an elipsis. Don't use the html elipsis code as this doesn't display in svg. Allow overflow on the graph to make sure we can display 15 charecters

--- a/rbhl/static/css/rbhl.scss
+++ b/rbhl/static/css/rbhl.scss
@@ -383,6 +383,7 @@ a {
     .c3 svg{
         font-size: 15px;
         font-family: 'Lato', sans-serif;
+        overflow: visible !important;
     }
 
     line.treatment-0{
